Made Some Improvements